--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "blue-canvas-tmpl",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "blue-canvas-tmpl",
   "main": "./index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config build/dev.js",
-    "build": "node build/build.js"
+    "dev": "webpack-dev-server --config blue-build-library/dev.js",
+    "build": "node blue-build-library/build.js"
   },
   "contributors": [
     "Blue"
@@ -25,9 +25,12 @@
     "babel-preset-stage-2": "^6.24.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3",
     "uglify-js": "^2.8.28",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "webpack": "3.10.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^2.11.2",
     "webpack-merge": "^4.1.2"
   },
@@ -46,6 +49,6 @@
   },
   "dependencies": {
     "blue-queue-pipe": "^1.0.2",
-    "blue-utils": "^1.0.10"
+    "blue-utils": "^1.1.1"
   }
 }
